# django-pancake

./: .pre-commit-config.yaml  .sourcery.yaml  MANIFEST.in  README.md  bumpver.toml  justfile  requirements.txt  setup.cfg
.github/workflows/: test.yml
django_pancake/: flatten.py  make_pancakes.py
tests/: test_pancake.py
