[metadata]
author = Adrian Holovaty
author_email = adrian@holovaty.com
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
description = Library for "flattening" Django templates.
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Jeff Triplett
maintainer_email = jeff.triplett@gmail.com
name = django_pancake
url = https://github.com/adrianholovaty/django-pancake
version = 2022.4.1

[options]
packages = find:
py_modules = django_pancake
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    make-pancakes=django_pancake.make_pancakes:main
