[metadata]
name = django_pancake
version = 2022.4.1
description = Library for "flattening" Django templates.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jefftriplett/django-pancake
author = Adrian Holovaty
author_email = adrian@holovaty.com
maintainer = Jeff Triplett
maintainer_email = jeff.triplett@gmail.com
license = MIT
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP

[options]
packages = find:
py_modules = django_pancake
install_requires =
    click
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    make-pancakes=django_pancake.make_pancakes:main

[black]
target-version = ['py37']

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black
add_imports = from __future__ import annotations
